project title text truncated

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,1 +1,2 @@
-[-] A l'afegir el team, el update dels projectes peta
+[-] Loading ?
+[-] La ruta del backend que retorna la llista d'usuaris potser es pot limitar a que retorni el nom .select('name)
